--- a/estilos.css
+++ b/estilos.css
@@ -11,18 +11,88 @@ img , figure{
     display: flex;
     object-fit: cover;
     object-position: center center;
+    border-radius: 3%;
+    
 }
 
+body{
+    font-family:var(--tipo-principal);
+    font-size:100%;
+    min-height: 100vh;
+    background-color: black;
+    font-smooth: always;
+    -webkit-font-smoothing:antialiased;
+    -moz-osx-font-smoothing:grayscale;
+
+}
+
+.circulos{
+    position:fixed;
+    width: 100%;
+    height: 100%;
+    top:0;
+    left:0;
+    background-color:lightblue;
+    z-index: 1;
+    filter: blur(20px);
+    animation: circulo1 100s linear infinite both;
+
+}
+.circulos .circulo{
+    position: absolute;
+    width:50%;
+    height:50%;
+    animation: circulo1 100s linear infinite both;
+    
+   
+}
+
+.circulos .circulo1{
+    
+    top:0%;
+    left:0%;
+    
+    
+    
+
+}
+
+
+.circulos .circulo1 .path{
+ fill: seagreen;
+}
+.circulos .circulo2{
+    top:0%;
+    right:0%;
+}
+.circulos .circulo2 .path{
+    fill: black;
+}
+.circulos .circulo3{
+    bottom: 0%;
+    left:0%;
+}
+.circulos .circulo3 .path{
+    fill:rgb(165, 127, 1);
+}
+.circulos .circulo4{
+    bottom: 0%;
+    right:0%;
+}
+.circulos .circulo4 .path{
+    fill:rgb(0, 59, 155);
+}
 .header{
     width: 100%;
     min-height:5em;
-    background-color: green;
+    
     padding: 1em 2em  ;
     display: flex;
     flex-flow: row wrap ;
     justify-content: space-between;
     align-items: center;
     text-decoration: none;
+    display: none;
 }
 .header .h1{
     
@@ -58,59 +128,134 @@ img , figure{
 
 
 .main{
-    background-color: blueviolet;
-    margin: 1em 0 ;
+    
+    margin:0 0 1em ;
     text-align: center;
+    position:relative;
+    z-index:2;
 }
 
 .seccion{
     width: 100%;
-    min-height: 80vh;
-    background:lightblue;
+    min-height: 60vh;
+    
     margin: 1em 0;
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
     align-items: center;
     padding: 2em;
+    
+    
 }
-.seccion .circulos{}
-.seccion .circulo{}
-.seccion .h2{}
-.seccion .h3{}
+
+.info{
+    animation: aparecer1 2s ease 1 both;
+}
+
+
+.links{
+    text-decoration:none;
+    list-style: none;
+    margin: 1em 0;
+    display: flex;
+    flex-flow: nowrap;
+    justify-content:center;
+    align-items: center;
+    color: black;
+    
+    
+    
+    
+
+    
+    
+    
+
+
+}
+
+.seccion .li{
+    text-transform: uppercase;
+    margin: 0 1em;
+    font-weight: 600;
+    border-top: 1px solid rgba(0, 0, 0,.4);
+    padding-top: 1em;
+    transition: all .5s ease;
+    animation: aparecer1 2s ease 1 both;
+    
+    
+    
+    
+}
+
+.links a:hover{
+    transition: all .5s ease;
+   background: whitesmoke;
+   border-radius: 30%;
+}
+
+
+    
+
+
+    
+    
+
+
+
+.seccion .h2{
+    font-family: var(--tipo-titular);
+    font-style: italic;
+    font-size: 5em;
+    font-weight: 800;
+    mix-blend-mode: multiply;
+    animation: aparecer1 2s ease 1 both;
+}
+.seccion .h3{
+    font-family:var(--tipo-titular);
+    font-size: 3em;
+    font-style: italic;
+    animation: aparecer1 2s ease 1 both;
+}
 
 .seccion .p{}
 .seccion .grid{
     width: 90%;
-    background-color: coral;
+    max-width:45em;
+    
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(10rem,1fr));
-    gap: 1em 0;
+    gap: 1em ;
+    margin: 1em 0;
+    
 }
 .seccion .article{
     width: 100%;
-    background-color: lightgoldenrodyellow;
+    
     min-height: 20vh;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
     position: relative;
+    overflow: hidden;
 }
 .seccion .a{}
 .seccion .figure{
     width: 100%;
-    background: forestgreen;
+    
 
 }
 .seccion .img{
     width: 100%;
-    background:red;
+    
+    
 }
 .seccion .h4{
     width: 100%;
-    height: 50%;
-    background: coral;
+    height: 100%;
+    color: white;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -118,15 +263,39 @@ img , figure{
     flex-flow: nowrap;
     justify-content: center;
     align-items: center;
+    background-color:rgba(0, 0, 0,.5);
+    backdrop-filter: blur(1rem);
+    opacity: 0;
+    transition: all .5s ease;
+    font-size: 1.8em;
+    font-style: italic;
+    transform:translateZ(1) scale(1.2);
 }
 
+.seccion .article:hover .h4{
+    opacity: 0.7;
+    transform:translateZ(1)  scale(1);
+    border-radius: 3%;
+    
+}
+
+.coder{
+    font-size: 20px;
+    animation: aparecer1 2s ease 1 both;
+}
 .abaout{}
 .abaout .h2{}
 .about .p{
+    max-width: 40rem;
+    margin:0 0 2rem;
+    text-align: left;
+    font-size: 1em;
+    padding-top: 30px;
+    animation: aparecer1 2s ease 1 both;
     
 }
 .about .ress{
-    background: black;
+    
     width: 100%;
     display: flex;
     flex-flow: nowrap;
@@ -136,27 +305,66 @@ img , figure{
 .about .li{
     list-style: none;
     margin: 0 1em;
-    background: orange;
+    
 }
 .about .li .a{}
 .about  .svg{
-    width: 3em;
-    height: 3em;
-    background: red;
+    width: 2.5em;
+    height: 2.5em;
+    color: black;
+    
+    
     
 }
 
 .footer{
-    background-color: red;
+    
     text-align: center;
     padding: 2em 0;
+    color: white;
+    box-shadow:0 0 1em 0.5em white;
+    
+    position: relative;
+    font-size: 20px;
+    z-index: 2;
+    
+    
 }
 .footer .spam{}
 
-
-
+.works{
+    box-shadow: 0 0 10em 10em white;
+    background:rgba(255, 255, 255,0.507);
+    background-color: white;
+    
+}
+.works .h2{
+    margin: 0 0 1rem;
+    
+    
+}
 
 
 
 .tipografiatitulo{
     font-family: 'Libre Baskerville', serif;}
+
+
+
+    @keyframes circulo1{
+        from{
+            transform:rotate(0deg) scale(2);
+        }
+        to{
+            trasnsform:rotate(360deg) scale(2);
+        }
+    }
+
+    @keyframes aparecer1{
+        from{
+            opacity: 0;
+            transform:translateY(50%)}
+        to{
+            opacity: 1;
+            transform: translateY(0);}
+    }
